tests/error/require_fail.gw
#require NonExisting

var ftbl f;
<<< var SinOsc s >>>;
